# magic_store

./: README.md  dim_orderitem.csv  pyproject.toml
data/: dim_account.csv  dim_orderitem.csv  dim_product.csv  dim_quote.csv  dim_store.csv  dim_user.csv  transportation_lanes.csv  usage_log.csv  uscities.csv
notebooks/: notebook.ipynb  probability.ipynb
src/: main.py
src/generate/: dim_account.py  dim_orderitem.py  dim_product.py  dim_quote.py  dim_store.py  dim_user.py  generate.py  transportation_lanes.py  usage_log.py  usage_log_v2.py
src/price_elasticity/: README.md  formula_transformers.py  pipeline.py  price_elasticity.py  price_elasticity_cluster.py
tableau/: dim_orderitem.hyper  magic_store.twb
tableau/pricing_strategy/: .~pricing_strategy__61531.twbr  pricing_strategy.twb
tableau/product_adoption/: README.md  product_adoption.twb  usage_log.hyper
tableau/sales_executive/: README.md  dim_orderitem.hyper  sales_executive.twb  sales_executivev2.twb
tableau/template/: magic_store_template.twb
tableau/transportation_network/: README.md  transportation_network.twb
trained_models/: model.pkl
