[tool.poetry]
name = "magic-store"
version = "0.1.0"
description = ""
authors = ["eddiejmin <eddiejmin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.2.3"
numpy = "^2.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
