[tool.poetry]
name = "magic-store"
version = "0.1.0"
description = ""
authors = ["eddiejmin <eddiejmin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.2.3"
numpy = "^2.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
patsy = "^0.5.6"
category-encoders = "^2.6.4"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
